[workspace]
members = ["web_frontend", "privaxy", "src-tauri"]

[profile.release]
lto = true

[profile.release.package.privaxy]
codegen-units = 1
opt-level = 3

[profile.release.package.privaxy_app]
codegen-units = 1
opt-level = 3

[profile.release.package.web_frontend]
codegen-units = 1
opt-level = 's'
