[package]
name = "privaxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "privaxy"
path = "src/server/main.rs"

[dependencies]
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.18.1", features = ["full"] }
serde_json = "1.0.81"
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
tokio-util = { version = "0.7.1", features = ["full"] }
adblock = { version = "0.5.4" }
openssl = "0.10.40"
include_dir = "0.7.2"
chrono = { version = "0.4.19", features = ["serde"] }
rustls = { version = "0.20.4" }
futures-util = "0.3.21"
globset = "0.4.8"
http = "0.2.7"
tokio-rustls = "0.23.4"
hyper-rustls = { version = "0.23.0", features = ["http1", "http2"] }
log = "0.4.17"
env_logger = "0.9.0"
uluru = "3.0.0"
regex = "1.5.5"
lazy_static = "1.4.0"
warp = "0.3.2"
lol_html = "0.3.1"
crossbeam-channel = "0.5.4"
thiserror = "1.0.31"
url = "2.2.2"
futures = "0.3.21"
dirs = "4.0.0"
async-compression = { version = "0.3.12", features = ["futures-io", "gzip"] }
reqwest = { version = "0.11.10", features = [
    "stream",
    "rustls-tls",
    "gzip",
    "deflate",
    "json",
    "trust-dns",
    "brotli",
] }
once_cell = "1.10.0"
serde-tuple-vec-map = "1.0.1"
base64 = "0.13.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.4.3", features = ["background_threads"] }
