[package]
name = "privaxy"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "privaxy"
path = "src/server/main.rs"

[lib]
name = "privaxy"
path = "src/server/lib.rs"

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.22.0", features = ["full"] }
serde_json = "1.0.89"
toml = "0.5.9"
serde = { version = "1.0.148", features = ["derive"] }
tokio-util = { version = "0.7.4", features = ["full"] }
adblock = { version = "0.6.0" }
openssl = { version = "0.10.43", features = ["vendored"] }
include_dir = "0.7.3"
chrono = { version = "0.4.23", features = ["serde"] }
rustls = { version = "0.20.7" }
futures-util = "0.3.25"
wildmatch = "2.1.1"
http = "0.2.8"
mime_guess = "2.0.4"
tokio-rustls = "0.23.4"
hyper-rustls = { version = "0.23.1", features = ["http1", "http2"] }
log = "0.4.17"
env_logger = "0.10.0"
uluru = "3.0.0"
regex = "1.7.0"
lazy_static = "1.4.0"
lol_html = "0.3.1"
crossbeam-channel = "0.5.6"
thiserror = "1.0.37"
url = "2.3.1"
futures = "0.3.25"
dirs = "4.0.0"
async-compression = { version = "0.3.15", features = ["futures-io", "gzip"] }
reqwest = { version = "0.11.13", features = [
  "stream",
  "rustls-tls",
  "gzip",
  "deflate",
  "json",
  "brotli",
] }
once_cell = "1.16.0"
serde-tuple-vec-map = "1.0.1"
base64 = "0.13.1"
