[package]
name = "privaxy_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "privaxy_app"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
log = "0.4.17"
privaxy = { path = "../privaxy" }
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["api-all", "system-tray"] }
tokio = { version = "1.22.0", features = ["full"] }
reqwest = "0.11.13"
num-format = "0.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
