[package]
name = "web_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
serde_json = "1.0.81"
num-format = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
gloo-utils = "0.1.3"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
futures = "0.3.21"
log = "0.4.17"
wasm-logger = "0.2.0"
gloo-timers = { version = "0.2.4", features = ["futures"] }
serde-tuple-vec-map = "1.0.1"
web-sys = { version = "0.3.57", features = [
    "Document",
    "HtmlHeadElement",
    "Element",
    "NamedNodeMap",
] }
